assets/css/style.css
:root {
  --color: black;
  --main-background-color: #fffaf0;
  --consistent-link-color: blue;
  --content-metadata-color: #484848;
  --box-shadow-container-color: #cccccc;
  --raised-backgroud-color: white;
  --blockquote-background-color: #e5e5e5;

  --primary-accent-color: #f48024;
  --secondary-accent-color: #77216f;
  --secondary-accent-color-hover: #833a72;
  --border-radius: 3px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color: white;
    --main-background-color: #2d2d2d;
    --consistent-link-color: #7db3e3;
    --content-metadata-color: #d4d4d4;
    --box-shadow-container-color: #222222;
    --raised-backgroud-color: #393939;
    --blockquote-background-color: #1b1b1b;
  }
}

* {
  font-family: sans-serif, Arial, Helvetica;
  color: var(--color);
}

.hidden {
  height: 0;
}

/*
 * Code
 */

div.highlight {
  overflow-x: auto;
  border: 2px solid var(--box-shadow-container-color);
  border-radius: var(--border-radius);
}

.highlight code {
  color: white;
}

div.highlight pre {
  margin: 0;
  padding: 0.25rem 0;
}

tr > td:first-child > pre {
  padding-left: 0.25rem;
}

tr > td:last-child > pre {
  padding-right: 0.25rem;
}

.monospace {
  font-family: "Courier New", Courier, monospace;
}

code,
code * {
  font-family: "Courier New", Courier, monospace !important;
  font-size: 0.9rem !important;
}

::selection {
  background-color: var(--primary-accent-color);
  color: black;
}

body {
  margin: 0px;
  width: 100%;
  overflow-x: hidden;
  background-color: var(--main-background-color);
}

blockquote {
  /* margin: 1rem; */
  margin-left: 2rem;
  border-left: 4px solid var(--secondary-accent-color);
  border-radius: var(--border-radius);
  background-color: var(--blockquote-background-color);
}

blockquote > p {
  margin: 0;
  padding: 0.75rem;
}

address {
  font-style: unset;
}

time {
  color: inherit;
}

/* Extremely helpful for large enough tap targets for mobile testing in lighthouse */
ul:not(.undecorated-list) > li:first-child,
ol:not(.undecorated-list) > li:first-child,
.archive-list > li:first-child {
  margin-top: 0;
}

ul:not(.undecorated-list) > li,
ol:not(.undecorated-list) > li,
ol.archive-list > li {
  margin-top: 0.6575rem;
  margin-bottom: 0.6575rem;
}

ul:not(.undecorated-list) > li:last-child,
ol:not(.undecorated-list) > li:last-child,
ol.archive-list > li:last-child {
  margin-bottom: 0;
}

.btn {
  color: white;
  background-color: var(--secondary-accent-color);
  border: none;
  padding: 0.5rem;
  border-radius: var(--border-radius);
  border: 2px solid var(--box-shadow-container-color);
  line-height: 100%;
}

.btn:hover,
.btn:focus,
.btn:active {
  background-color: var(--secondary-accent-color-hover);
  transition: background-color ease-in 0.15s;
  cursor: pointer;
}

.btn:active {
  background-color: #290033;
  transition: background-color ease-in 0.1s;
}

figure {
  margin: 0;
  text-align: center;
}

figure > picture > img {
  max-width: 75%;
  border: 2px solid var(--box-shadow-container-color);
}

/*
 * Taxonomy
 */

.taxonomy-list {
  display: inline-flex;
  flex-wrap: wrap;
}

.taxonomy-metadata {
  line-height: 1.375rem;
}

.taxonomy-metadata > *:first-child {
  margin-top: 1rem;
}

.content-metadata > *:last-child {
  margin-bottom: 0;
}

.taxonomy-list > li {
  margin-right: 0.3rem;
}

.taxonomy-list > li:last-child {
  margin-right: 0;
}

.taxonomy-value {
  display: inline-block;
  padding: 0.36rem 0.73rem;
}

#content-about {
  font-size: medium;
  margin-top: 0;
}

.content-heading > a {
  vertical-align: middle;
}

#header {
  display: flex;
  list-style: none;
  margin-bottom: 1.5rem;
}

#title-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1rem;
}

#title {
  display: inline-block;
  margin: 0;
  margin-right: 0.5rem;
}

#h1 {
  font-size: x-large;
}

.font-weight-bold {
  font-weight: bold;
}

.font-weight-normal {
  font-weight: unset;
}

.summary-title {
  margin-top: 0;
  font-size: medium;
}

.undecorated-link,
.undecorated-link:link,
.undecorated-link:visited {
  text-decoration: none;
}

.consistent-link,
.consistent-link:link,
.consistent-link:visited {
  color: var(--consistent-link-color);
}

.undecorated-list {
  list-style: none;
  padding-left: 0;
  margin: 0;
}

/*
 * Page Controls
 */

#page-controls {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  margin-top: 1rem;
  /* Change to margin-inline eventually */
  margin-left: 1.5rem;
  margin-right: 1.5rem;
}

#page-controls > *,
#page-controls-prev > *,
#page-controls-next > * {
  margin-right: 1rem;
}

#page-controls > *:last-child,
#page-controls-prev > *:last-child,
#page-controls-next > *:last-child {
  margin-right: 0;
}

#page-controls-prev,
#page-controls-next {
  display: flex;
  justify-content: space-around;
}

#content-container {
  display: flex;
  justify-content: center;
}

#content-container > * {
  margin-right: 1rem;
}

#content-container > *:last-child {
  margin-right: 0rem;
}

.email-component {
  color: inherit;
}

#page-container {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  height: 100%;
  margin-bottom: 1rem;
  margin-left: 1rem;
  margin-right: 1rem;
}

ul.contact-list > li {
  margin-bottom: 1rem;
}

ul.contact-list > li:last-child {
  margin-bottom: 0rem;
}

/*
 * Navbar
 */

nav {
  display: flex;
  justify-content: center;
  background-color: #393939;
  width: 100%;
  border-top: 3px solid var(--primary-accent-color);
  box-shadow: 0 10px 10px -1px rgba(0, 0, 0, 0.25);
}

nav > ul {
  display: flex;
  justify-content: start;
}

nav > ul > li {
  margin-right: 0rem;
}

nav > ul > li > a {
  color: #ffffff;
  display: block;
  padding: 1rem;
}

nav > ul > li > a:hover,
nav > ul > li > a:focus,
nav > ul > li > a:active {
  transition: all 0.15s ease-in;
  background-color: #595959;
}

.content-list > .content-item {
  margin-bottom: 1rem;
}

.content-list > .content-item:last-child {
  margin-bottom: 0rem;
}

.small-text {
  font-size: small;
}

/*
 * Sidebar
 */

.profile-picture {
  border-radius: var(--border-radius);
  display: block;
  margin: auto;
  border: 2px solid var(--box-shadow-container-color);
}

#sidebar {
  width: 250px;
  height: 100%;
}

#sidebar > * {
  margin-bottom: 1rem;
}

#sidebar > *:last-child {
  margin-bottom: 0;
}

#sidebar > button {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.sidebar-paragraph {
  margin-bottom: 0;
}

.sidebar-section-header {
  font-size: large;
  font-weight: 500;
}

#main {
  min-width: 200px;
  width: 50%;
  max-width: 1250px;
  display: flex;
  flex-direction: column;
}

#main > * {
  margin-bottom: 1rem;
}

#main > *:last-child {
  margin-bottom: 0;
}

#single-container > * {
  margin-bottom: 1rem;
}

#single-container > *:last-child {
  margin-bottom: 0;
}

/*
 * Footnotes
 */

.footnotes {
  word-break: break-word;
}

.footnotes > ol {
  margin: 0;
}

.footnotes p {
  margin: 1rem;
}

.footnotes > ol > li:last-child > p {
  margin-bottom: 0;
}

a.footnote-backref,
a.footnote-ref {
  color: var(--consistent-link-color);
}

a.footnote-ref {
  /* Change to margin-inline eventually */
  margin-left: 2px;
  margin-right: 2px;
}

/*
 * Content
 */

#content-title {
  margin-top: 0;
  font-size: x-large;
  margin-bottom: 1rem;
}

.content-metadata,
.content-metadata > * {
  color: var(--content-metadata-color);
}

#content > *:last-child {
  margin-bottom: 0;
}

.box-shadow-container {
  padding: 1rem;
  border: 1px solid var(--box-shadow-container-color);
  box-shadow: 4px 4px 4px 2px var(--box-shadow-container-color);
  border-radius: var(--border-radius);
  background-color: var(--raised-backgroud-color);
  border-top: 3px var(--primary-accent-color) solid;
}

.centered {
  text-align: center;
}

.summary > p {
  margin-bottom: 0rem;
}

.nav-icon {
  color: white;
}

#page-links > * {
  margin-right: 0.75rem;
}

#page-links > *:last-child {
  margin-right: 0rem;
}

/*
 * Webring
 */

.webring {
  display: flex;
  flex-direction: column;
}

.webring > * {
  margin-bottom: 1rem;
}

.webring > *:last-child {
  margin-bottom: 0;
}

.webring .webring-articles {
  display: flex;
  flex-direction: column;
}

.webring .webring-articles > * {
  margin-bottom: 1rem;
}

.webring .webring-articles > *:last-child {
  margin-bottom: 0;
}

.webring .webring-title {
  margin: 0;
  font-size: smaller;
}

.webring .webring-article {
  flex: 1;
  display: flex;
  flex-direction: column;
  padding-left: 0.5rem;
  border-left: 3px solid var(--secondary-accent-color);
}

.webring .webring-summary {
  font-size: small;
  flex: 1;
}

.webring .webring-attribution {
  text-align: right;
  font-size: small;
  margin: 0;
}

.webring .webring-header {
  font-size: medium;
  margin: 0;
  margin-bottom: 1rem;
}

/*
 * Mobile
 */

@media only screen and (max-width: 650px) {
  #content-container {
    flex-direction: column;
  }

  #content-container > * {
    margin-right: 0rem;
    margin-bottom: 1rem;
  }

  #content-container > *:last-child {
    margin-bottom: 0rem;
  }

  #single-container > * {
    margin-bottom: 1rem;
  }

  #main {
    width: auto;
  }

  #main > * {
    margin-bottom: 1rem;
  }

  #sidebar {
    width: auto;
    max-width: none;
  }

  .mobile-hide {
    display: none !important;
  }
}

/*
 * Desktop
 */

@media only screen and (min-width: 650px) {
  .desktop-hide {
    display: none !important;
  }
}

